# DEMO

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
resources/: app.rc  resources.qrc
src/: main.cpp
src/core/: FileSignatureDetector.cpp  FileSignatureDetector.h  PitchShifter.cpp  PitchShifter.h  PlayerController.cpp  PlayerController.h  ProcessingAudioOutput.cpp  ProcessingAudioOutput.h
src/ffmpeg/: FFmpegDecoder.cpp  FFmpegDecoder.h  FFmpegPlayer.cpp  FFmpegPlayer.h  FFmpegVideoRenderer.cpp  FFmpegVideoRenderer.h
src/managers/: DPIAdapter.cpp  DPIAdapter.h  FileAssociation.cpp  FileAssociation.h  IconManager.cpp  IconManager.h  PluginManager.cpp  PluginManager.h  ThemeManager.cpp  ThemeManager.h
src/ui/: AudioPlayer.cpp  AudioPlayer.h  FileAssocDialog.cpp  FileAssocDialog.h  HeaderBar.cpp  HeaderBar.h  ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  MediaViewer.cpp  MediaViewer.h  PlaybackControls.cpp  PlaybackControls.h  ProgressBar.cpp  ProgressBar.h  SeekSlider.cpp  SeekSlider.h  SettingsPanel.cpp  SettingsPanel.h  SpeedSelector.cpp  SpeedSelector.h  VideoPlayer.cpp  VideoPlayer.h  VolumeSlider.cpp  VolumeSlider.h
src/utils/: FormatUtils.cpp  FormatUtils.h
