cmake_minimum_required(VERSION 3.21)

project(FireflyPlayer VERSION 1.6.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

find_package(Qt6 REQUIRED COMPONENTS
    Core
    Gui
    Widgets
    Svg
    Multimedia
    MultimediaWidgets
)

# 优先使用系统安装的 SoundTouch；找不到则从源码编译
find_package(PkgConfig QUIET)
if(PkgConfig_FOUND)
    pkg_check_modules(SOUNDTOUCH QUIET soundtouch)
    pkg_check_modules(FFMPEG QUIET
        libavcodec
        libavformat
        libavutil
        libswscale
        libswresample
    )
endif()

# 如果 pkg-config 找不到，尝试手动查找头文件和库
# 支持通过 FFMPEG_ROOT 环境变量或 CMake 变量指定 FFmpeg 安装路径
if(NOT FFMPEG_FOUND)
    set(_FFMPEG_ROOT_HINTS "")
    if(FFMPEG_ROOT)
        set(_FFMPEG_ROOT_HINTS ${FFMPEG_ROOT})
    endif()
    if(DEFINED ENV{FFMPEG_DIR})
        set(_FFMPEG_ROOT_HINTS ${_FFMPEG_ROOT_HINTS} $ENV{FFMPEG_DIR})
    endif()
    if(DEFINED ENV{FFMPEG_ROOT})
        set(_FFMPEG_ROOT_HINTS ${_FFMPEG_ROOT_HINTS} $ENV{FFMPEG_ROOT})
    endif()

    find_path(AVCODEC_INCLUDE_DIR libavcodec/avcodec.h
        PATHS ${_FFMPEG_ROOT_HINTS}/include
        PATH_SUFFIXES include
    )
    find_library(AVCODEC_LIBRARY avcodec
        PATHS ${_FFMPEG_ROOT_HINTS}/lib
        PATH_SUFFIXES lib
    )
    find_path(AVFORMAT_INCLUDE_DIR libavformat/avformat.h
        PATHS ${_FFMPEG_ROOT_HINTS}/include
        PATH_SUFFIXES include
    )
    find_library(AVFORMAT_LIBRARY avformat
        PATHS ${_FFMPEG_ROOT_HINTS}/lib
        PATH_SUFFIXES lib
    )
    find_path(AVUTIL_INCLUDE_DIR libavutil/avutil.h
        PATHS ${_FFMPEG_ROOT_HINTS}/include
        PATH_SUFFIXES include
    )
    find_library(AVUTIL_LIBRARY avutil
        PATHS ${_FFMPEG_ROOT_HINTS}/lib
        PATH_SUFFIXES lib
    )
    find_path(SWSCALE_INCLUDE_DIR libswscale/swscale.h
        PATHS ${_FFMPEG_ROOT_HINTS}/include
        PATH_SUFFIXES include
    )
    find_library(SWSCALE_LIBRARY swscale
        PATHS ${_FFMPEG_ROOT_HINTS}/lib
        PATH_SUFFIXES lib
    )
    find_path(SWRESAMPLE_INCLUDE_DIR libswresample/swresample.h
        PATHS ${_FFMPEG_ROOT_HINTS}/include
        PATH_SUFFIXES include
    )
    find_library(SWRESAMPLE_LIBRARY swresample
        PATHS ${_FFMPEG_ROOT_HINTS}/lib
        PATH_SUFFIXES lib
    )

    if(AVCODEC_INCLUDE_DIR AND AVCODEC_LIBRARY AND AVFORMAT_INCLUDE_DIR AND AVFORMAT_LIBRARY)
        set(FFMPEG_FOUND TRUE)
        set(FFMPEG_INCLUDE_DIRS
            ${AVCODEC_INCLUDE_DIR}
            ${AVFORMAT_INCLUDE_DIR}
            ${AVUTIL_INCLUDE_DIR}
            ${SWSCALE_INCLUDE_DIR}
            ${SWRESAMPLE_INCLUDE_DIR}
        )
        set(FFMPEG_LIBRARIES
            ${AVCODEC_LIBRARY}
            ${AVFORMAT_LIBRARY}
            ${AVUTIL_LIBRARY}
            ${SWSCALE_LIBRARY}
            ${SWRESAMPLE_LIBRARY}
        )
    endif()
endif()

# 诊断输出
message(STATUS "FFMPEG_FOUND = ${FFMPEG_FOUND}")
if(FFMPEG_FOUND)
    message(STATUS "FFMPEG_INCLUDE_DIRS = ${FFMPEG_INCLUDE_DIRS}")
    message(STATUS "FFMPEG_LIBRARIES = ${FFMPEG_LIBRARIES}")
endif()

# 如果用户显式指定了 FFmpeg 路径但没找到，应该报错
if(_FFMPEG_ROOT_HINTS AND NOT FFMPEG_FOUND)
    message(FATAL_ERROR "FFmpeg was requested via FFMPEG_ROOT/FFMPEG_DIR but not found. "
        "Check that the path contains include/ and lib/ subdirectories.")
endif()

if(NOT SOUNDTOUCH_FOUND)
    message(STATUS "系统未安装 SoundTouch，使用 FetchContent 从源码编译")
    include(FetchContent)
    FetchContent_Declare(
        soundtouch_src
        URL https://codeberg.org/soundtouch/soundtouch/archive/2.3.2.tar.gz
              https://gitlab.com/soundtouch/soundtouch/-/archive/2.3.2/soundtouch-2.3.2.tar.bz2
        DOWNLOAD_EXTRACT_TIMESTAMP TRUE
    )
    FetchContent_Populate(soundtouch_src)

    # 创建 soundtouch 子目录，使 #include <soundtouch/SoundTouch.h> 能找到头文件
    file(MAKE_DIRECTORY ${soundtouch_src_SOURCE_DIR}/include/soundtouch)
    file(COPY
        ${soundtouch_src_SOURCE_DIR}/include/SoundTouch.h
        ${soundtouch_src_SOURCE_DIR}/include/FIFOSampleBuffer.h
        ${soundtouch_src_SOURCE_DIR}/include/FIFOSamplePipe.h
        ${soundtouch_src_SOURCE_DIR}/include/STTypes.h
        ${soundtouch_src_SOURCE_DIR}/include/BPMDetect.h
        DESTINATION ${soundtouch_src_SOURCE_DIR}/include/soundtouch
    )
    # 生成 soundtouch_config.h
    file(WRITE ${soundtouch_src_SOURCE_DIR}/include/soundtouch/soundtouch_config.h
        "/* Generated by CMake */\n"
        "#define SOUNDTOUCH_FLOAT_SAMPLES 1\n"
    )

    set(SOUNDTOUCH_SOURCES
        ${soundtouch_src_SOURCE_DIR}/source/SoundTouch/AAFilter.cpp
        ${soundtouch_src_SOURCE_DIR}/source/SoundTouch/cpu_detect_x86.cpp
        ${soundtouch_src_SOURCE_DIR}/source/SoundTouch/FIFOSampleBuffer.cpp
        ${soundtouch_src_SOURCE_DIR}/source/SoundTouch/FIRFilter.cpp
        ${soundtouch_src_SOURCE_DIR}/source/SoundTouch/InterpolateLinear.cpp
        ${soundtouch_src_SOURCE_DIR}/source/SoundTouch/InterpolateCubic.cpp
        ${soundtouch_src_SOURCE_DIR}/source/SoundTouch/InterpolateShannon.cpp
        ${soundtouch_src_SOURCE_DIR}/source/SoundTouch/mmx_optimized.cpp
        ${soundtouch_src_SOURCE_DIR}/source/SoundTouch/RateTransposer.cpp
        ${soundtouch_src_SOURCE_DIR}/source/SoundTouch/SoundTouch.cpp
        ${soundtouch_src_SOURCE_DIR}/source/SoundTouch/sse_optimized.cpp
        ${soundtouch_src_SOURCE_DIR}/source/SoundTouch/TDStretch.cpp
    )

    add_library(soundtouch STATIC ${SOUNDTOUCH_SOURCES})
    target_include_directories(soundtouch PUBLIC
        ${soundtouch_src_SOURCE_DIR}/include
    )
    set(SOUNDTOUCH_LIBRARIES soundtouch)
    set(SOUNDTOUCH_INCLUDE_DIRS ${soundtouch_src_SOURCE_DIR}/include)
endif()

set(SOURCES
    src/main.cpp
    src/core/FileSignatureDetector.cpp
    src/core/PlayerController.cpp
    src/core/PitchShifter.cpp
    src/core/ProcessingAudioOutput.cpp
    src/ffmpeg/FFmpegDecoder.cpp
    src/ffmpeg/FFmpegVideoRenderer.cpp
    src/ffmpeg/FFmpegPlayer.cpp
    src/ui/MainWindow.cpp
    src/ui/HeaderBar.cpp
    src/ui/MediaViewer.cpp
    src/ui/VideoPlayer.cpp
    src/ui/ImageViewer.cpp
    src/ui/AudioPlayer.cpp
    src/ui/PlaybackControls.cpp
    src/ui/ProgressBar.cpp
    src/ui/SeekSlider.cpp
    src/ui/VolumeSlider.cpp
    src/ui/SpeedSelector.cpp
    src/ui/SettingsPanel.cpp
    src/ui/FileAssocDialog.cpp
    src/managers/ThemeManager.cpp
    src/managers/DPIAdapter.cpp
    src/managers/FileAssociation.cpp
    src/managers/PluginManager.cpp
    src/managers/IconManager.cpp
    src/utils/FormatUtils.cpp
)

set(HEADERS
    src/core/FileSignatureDetector.h
    src/core/PlayerController.h
    src/core/PitchShifter.h
    src/core/ProcessingAudioOutput.h
    src/ffmpeg/FFmpegDecoder.h
    src/ffmpeg/FFmpegVideoRenderer.h
    src/ffmpeg/FFmpegPlayer.h
    src/ui/MainWindow.h
    src/ui/HeaderBar.h
    src/ui/MediaViewer.h
    src/ui/VideoPlayer.h
    src/ui/ImageViewer.h
    src/ui/AudioPlayer.h
    src/ui/PlaybackControls.h
    src/ui/ProgressBar.h
    src/ui/SeekSlider.h
    src/ui/VolumeSlider.h
    src/ui/SpeedSelector.h
    src/ui/SettingsPanel.h
    src/ui/FileAssocDialog.h
    src/managers/ThemeManager.h
    src/managers/DPIAdapter.h
    src/managers/FileAssociation.h
    src/managers/PluginManager.h
    src/managers/IconManager.h
    src/utils/FormatUtils.h
)

set(RESOURCES
    resources/resources.qrc
)

set(WIN_RESOURCES
    resources/app.rc
)

if(WIN32)
    qt_add_executable(FireflyPlayer
        ${SOURCES}
        ${HEADERS}
        ${RESOURCES}
        ${WIN_RESOURCES}
    )
else()
    qt_add_executable(FireflyPlayer
        ${SOURCES}
        ${HEADERS}
        ${RESOURCES}
    )
endif()

target_include_directories(FireflyPlayer PRIVATE
    ${CMAKE_SOURCE_DIR}/src
    ${SOUNDTOUCH_INCLUDE_DIRS}
    ${FFMPEG_INCLUDE_DIRS}
)

target_link_libraries(FireflyPlayer PRIVATE
    Qt6::Core
    Qt6::Gui
    Qt6::Widgets
    Qt6::Svg
    Qt6::Multimedia
    Qt6::MultimediaWidgets
    ${SOUNDTOUCH_LIBRARIES}
    ${FFMPEG_LIBRARIES}
)

if(FFMPEG_FOUND)
    target_compile_definitions(FireflyPlayer PRIVATE FFMPEG_ENABLED)
endif()

if(WIN32)
    set_target_properties(FireflyPlayer PROPERTIES
        WIN32_EXECUTABLE TRUE
    )
endif()

if(APPLE)
    set_target_properties(FireflyPlayer PROPERTIES
        MACOSX_BUNDLE TRUE
        MACOSX_BUNDLE_BUNDLE_NAME "FireflyPlayer"
        MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
        MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION}
    )
endif()
